Fix more occurrences of links with low contrast

--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -661,6 +661,10 @@ body > footer a {
   display:inline-block;
   border-bottom:0;
 }
+body > footer a:hover,
+body > footer a:focus {
+    color:var(--light-magenta-color);
+}
 
 /* {{{ ElePHPants photo stream */
 
@@ -1526,6 +1530,10 @@ div.soft-deprecation-notice blockquote.sidebar {
 #breadcrumbs a:link,
 #breadcrumbs a:visited {
     border-width:0;
+}
+#breadcrumbs a:hover,
+#breadcrumbs a:focus {
+    color:var(--light-magenta-color);
 }
 
 #breadcrumbs .next,
